# elaborato_unifi

./: CMakeLists.txt  DOCUMENTATION.md  README.md
GameEngine/: Activatable.cpp  Activatable.h  Animation.cpp  Animation.h  Border.cpp  Border.h  CMakeLists.txt  Collision.cpp  Collision.h  ControlObserver.cpp  ControlObserver.h  Engine.cpp  Engine.h  Entity.cpp  Entity.h  Input.cpp  Input.h  KeyNotifier.cpp  KeyNotifier.h  KeyObserver.cpp  KeyObserver.h  Manager.h  Map.h  Observer.cpp  Observer.h  Segment.cpp  Segment.h  Texture.cpp  Texture.h  Utility.h  Vector2D.cpp  Vector2D.h
GameEngine/Collisions/: Border.cpp  Collision.cpp  Collision.h
GameEngine/Components/: Collider.h  Light.h  Sprite.cpp  Sprite.h  Transform.cpp  Transform.h
GameEngine/ECS/: Entity.cpp  Entity.h  Manager.cpp  Manager.h
GameEngine/ECS/Components/: Animation.cpp  Animation.h  Collider.cpp  Collider.h  Light.h  Sprite.cpp  Sprite.h  Text.cpp  Text.h  Transform.cpp  Transform.h
GameEngine/ODP/: ControlObserver.cpp  ControlObserver.h  EntityObserver.cpp  EntityObserver.h  Input.cpp  Input.h  Observer.cpp  Observer.h  SystemObserver.cpp  SystemObserver.h
GameSrc/: Bullet.h  CMakeLists.txt  Cursor.cpp  Cursor.h  Game.cpp  Interactable.h  Inventory.cpp  Inventory.h  Room.cpp  Room.h  Scheduler.cpp  Scheduler.h
GameSrc/Creatures/: Boss.cpp  Boss.h  Enemy.h  Minion.h  NPC.h  Pet.h  Player.cpp  Player.h
GameSrc/Enviroment/: Barrier.cpp  Barrier.h  Chasm.cpp  Chasm.h  CollisionArea.cpp  CollisionArea.h  Door.cpp  Door.h  Tile.cpp  Tile.h  Wall.h
GameSrc/Items/: ActiveItem.cpp  ActiveItem.h  Item.h  MeleeWeapon.h  PassiveItem.h  QuestItem.cpp  QuestItem.h  RangedWeapon.h  Weapon.h
GameSrc/UI/: Button.h  Menu.cpp  Menu.h  Widget.cpp  Widget.h  Window.cpp  Window.h
cmake/: FindSDL2TTF.cmake
engine/: Activatable.cpp  CMakeLists.txt  Engine.cpp  Engine.h  Utility.h  Vector2D.h
engine/collisions/: Border.h  Collision.cpp  Collision.h
engine/ecs/: Entity.cpp  Entity.h  Manager.cpp  Manager.h
engine/ecs/components/: Animation.cpp  Animation.h  Collider.cpp  Collider.h  Sprite.cpp  Sprite.h  Transform.cpp  Transform.h
engine/odp/: EntityObserver.cpp  EntityObserver.h  Input.cpp  Input.h  Observer.cpp  Observer.h
game/: Bullet.h  Cursor.h  Factory.cpp  Factory.h  Game.cpp  Interactable.cpp  Inventory.cpp  Inventory.h  Map.cpp  Map.h  Room.cpp  Room.h  Scheduler.cpp  Scheduler.h  Utils.h
game/assets/rooms/: demo.room  guide.room
game/config/: events_mapping.config
game/creatures/: NPC.h  Pet.h  Player.cpp  Player.h
game/creatures/enemies/: Enemy.h
game/creatures/enemies/bosses/: Boss.h
game/creatures/enemies/minions/: Minion.h  Slime.h
game/creatures/pets/: Gatu.cpp  Gatu.h  Gerry.cpp  Gerry.h
game/creatures/players/: Player.cpp  Player.h
game/enviroment/: Chasm.cpp  Chasm.h  CollisionArea.cpp  CollisionArea.h  Door.cpp  Door.h  Tile.cpp  Tile.h
game/items/: Item.h  MeleeWeapon.h  PassiveItem.h  QuestItem.h  Weapon.h
game/items/active-item/: ActiveItem.h
game/items/passive-item/: PassiveItem.cpp  PassiveItem.h
game/items/quest-item/: QuestItem.h
game/items/weapons/: Weapon.h
game/items/weapons/melee/: MeleeWeapon.h
game/items/weapons/ranged/: RangedWeapon.h
game/ui/: Menu.cpp  Menu.h  Widget.cpp  Widget.h
test/: CMakeLists.txt
test/lib/googletest/docs/: FAQ.md
test/lib/googletest/include/gtest/internal/: gtest-internal.h
test/lib/googletest/samples/: sample3-inl.h
test/lib/googletest/scripts/: release_docs.py  upload.py
test/lib/googletest/src/: gtest-port.cc
test/lib/googletest/test/: gtest-message_test.cc  gtest-printers_test.cc  gtest_output_test_.cc  gtest_unittest.cc  gtest_xml_test_utils.py
test/unit_testing/: ColliderTest.cpp  CollisionTest.cpp  EngineTest.cpp  EntityTest.cpp  ManagerTest.cpp  SpriteTest.cpp  UtilityTest.cpp  Vector2DTest.cpp
